--- a/GymManagementSystemPL/Views/_ViewImports.cshtml
+++ b/GymManagementSystemPL/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using GymManagementSystemPL
 @using GymManagementSystemPL.Models
+@using GymManagementBLL.ViewModels.MemberViewModels
+@using GymManagementBLL.ViewModels.TrainerViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
