--- a/GymManagementSystemPL/Views/_ViewImports.cshtml
+++ b/GymManagementSystemPL/Views/_ViewImports.cshtml
@@ -2,4 +2,7 @@
 @using GymManagementSystemPL.Models
 @using GymManagementBLL.ViewModels.MemberViewModels
 @using GymManagementBLL.ViewModels.TrainerViewModels
+@using GymManagementBLL.ViewModels.PlanViewModels
+@using GymManagementBLL.ViewModels.SessionViewModels
+@using GymManagementSystemBLL.ViewModels.SessionViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
